--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,7 @@
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/pt-sans-regular.woff2") format("woff2");
+  src: url("../fonts/ptsans-400.woff2") format("woff2");
   font-display: swap;
 }
 
@@ -10,7 +10,7 @@
   font-family: "PT Sans";
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/pt-sans-bold.woff2") format("woff2");
+  src: url("../fonts/ptsans-700.woff2") format("woff2");
   font-display: swap;
 }
 
@@ -34,7 +34,7 @@ body {
 .container {
   margin: 0 auto;
   width: 1200px;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 .visually-hidden {
@@ -105,7 +105,7 @@ ul {
 .navigation-link-current::before {
   position: absolute;
   content: "";
-  width: 80px;
+  width: 70px;
   border: 2px solid #756257;
   top: 44px;
 }
@@ -250,15 +250,6 @@ main-container {
   text-align: center;
   margin: 0 auto;
 }
-
-/*.help-text::after {
-  content: '';
-  position: absolute;
-  top: 30px;
-  bottom: 30px;
-  width: 60px;
-  height: 2px;
-}*/
 
 /*ADVATAGES*/
 .advantages {
@@ -630,6 +621,16 @@ popover-close:focus {
   align-self: center;
 }
 
+.children {
+  display: flex;
+  align-items: center;
+}
+
+.popover-icon {
+  padding-left: 10px;
+  padding-top: 8px;
+}
+
 .popover-slaider-child {
   position: relative;
   display: grid;
@@ -662,7 +663,7 @@ popover-close:focus {
   line-height: 20px;
   color: #FFF;
   background-color: #333;
-  box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
   border-radius: 10px;
   padding: 15px 18px 18px 22px;
   margin: 0;
@@ -860,7 +861,7 @@ popover-close:focus {
 .navigation-link-current-catalog::before {
   position: absolute;
   content: "";
-  width: 109px;
+  width: 100px;
   border: 2px solid #756257;
   top: 44px;
 }
